--- a/webpage3.html
+++ b/webpage3.html
@@ -8,6 +8,20 @@
   </head>
   <body>
 
+     <div class="navbar">
+      <div class="Logo">
+        <h3>FZ</h3>
+      </div>
+       <div class="ul-navbar">
+       <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+
+       </ul>
+      
+      </div>
+     </div>
 
     <div  class="flex-parent-element" >
 
